introduced scoring mechanism
now the score for each food is being counted and shown

--- a/snake.css
+++ b/snake.css
@@ -10,6 +10,15 @@ h1 {
   border: 1px solid black;
 }
 
+#scoreBoard {
+  height: 50px;
+  width: 50px;
+  margin: 5px auto;
+  border: 1px solid black;
+  align-items: center;
+  text-align: center;
+}
+
 .cell {
   width: 8px;
   height: 8px;
