--- a/snake.css
+++ b/snake.css
@@ -7,7 +7,6 @@ h1 {
   display: flex;
   margin: 0 auto;
   flex-wrap: wrap;
-  /* border: 1px solid black; */
   box-shadow: 0px 0px 3px 1px gray;
 }
 
@@ -17,9 +16,9 @@ h1 {
   width: fit-content;
   padding: 0 5px;
   margin: 5px auto;
-  border: 1px solid black;
   align-items: center;
   text-align: center;
+  box-shadow: 0px 0px 3px 1px gray;
 }
 
 .cell {
