--- a/snake.css
+++ b/snake.css
@@ -1,24 +1,44 @@
-h1 {
-  text-align: center;
+* {
+  font-family: sans-serif;
+}
+
+body {
+}
+
+#container {
+  margin: 100px auto;
+  width: 800px;
+  box-shadow: 0px 0px 4px 1px gray;
+}
+
+#header {
+  padding: 0 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(224, 224, 224);
+}
+
+#header > h1 {
+  font-weight: lighter;
+}
+
+#header h4,
+#header h1 {
+  color: rgb(83, 83, 83);
 }
 
 #grid {
   width: 800px;
   display: flex;
-  margin: 0 auto;
   flex-wrap: wrap;
-  box-shadow: 0px 0px 3px 1px gray;
 }
 
 #scoreBoard {
   display: flex;
   height: 50px;
-  width: fit-content;
   padding: 0 5px;
-  margin: 5px auto;
   align-items: center;
-  text-align: center;
-  box-shadow: 0px 0px 3px 1px gray;
 }
 
 .cell {
@@ -27,7 +47,7 @@ h1 {
 }
 
 .snake {
-  background-color: black;
+  background-color: rgb(36, 36, 36);
   border-radius: 2px;
 }
 
@@ -42,7 +62,6 @@ h1 {
 }
 
 .specialFood {
-  /* background-color: rgb(145, 26, 241); */
   animation-name: specialFoodGlow;
   background-color: red;
   animation-duration: 0.5s;
