--- a/snake.css
+++ b/snake.css
@@ -8,7 +8,7 @@ body {
 #container {
   margin: 100px auto;
   width: 800px;
-  box-shadow: 0px 0px 4px 1px gray;
+  box-shadow: inset 0px 0px 7px 1px gray;
 }
 
 #header {
@@ -57,7 +57,7 @@ body {
 }
 
 .normalFood {
-  background-color: darkslateblue;
+  background-color: green;
   border-radius: 50%;
 }
 
