--- a/snake.css
+++ b/snake.css
@@ -81,7 +81,7 @@
 #buttonContainer {
   margin: 0 auto;
   width: fit-content;
-  display: none;
+  /* display: none; */
 }
 
 #buttonContainer > button {
@@ -104,7 +104,7 @@
     width: 386.9px;
   }
 
-  #buttonContainer {
+  /* #buttonContainer {
     display: block;
-  }
+  } */
 }
